# TalkMate

./: .gitignore  README.md  findings.md  progress.md  pyproject.toml  talkmate.db  task_plan.md  vercel.json
api/: index.py
backend/: .env.example  .gitignore  README.md  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  session.py  url.py
backend/app/shared/: exceptions.py  responses.py
docs/: DOCUMENT_INVENTORY.md  INDEX.md  MIGRATION.md  api  architecture  database
docs/acceptance/: ACCEPT-001-mobile-app-ui-adjustment.md
docs/api/: api-design.md  conversations.md  scenarios.md
docs/deployment/: vercel-tidb-ca.md  vercel-tidbcloud.md
docs/plans/: PLAN-001-mvp-and-mobile-app-ui.md
docs/product/: business-research.md  mvp-scope.md  phase1-tasks.md  project-brief.md
docs/requirements/: REQ-001-mvp-and-mobile-app-ui.md
docs/retros/: RETRO-001-mobile-app-ui-adjustment.md
docs/reviews/: CR-001-mobile-app-ui-adjustment.md
docs/testing/: TEST-001-mobile-app-ui-verification.md  issues-mobile-app-ui.md
docs/uiux/: UI-001-mobile-app-layout-adjustment-discussion.md  UI-DESIGN-v2.md
docs/versions/v0.1.0/: _ORIGINAL_INDEX.md  (+2 more)
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
tests/e2e/: test_ai_e2e.py  test_auth_e2e.py  test_conversation_e2e.py  test_mobile_full_journey_e2e.py  test_mobile_layout_e2e.py  test_mobile_states_e2e.py  test_phase2_e2e.py  test_scenario_e2e.py  test_voice_e2e.py
(+125 files in other folders)
