[project]
name = "app"
version = "0.1.0"
dependencies = [ "fastapi==0.115.0", "uvicorn[standard]==0.32.0", "sqlalchemy==2.0.36", "pydantic==2.9.2", "pydantic-settings==2.6.0", "python-jose[cryptography]==3.3.0", "passlib[bcrypt]==1.7.4", "bcrypt==4.0.1", "httpx==0.27.2", "pytest==8.3.3", "openai==1.54.0", "pymysql==1.1.1" ]
requires-python = "~=3.12.0"
